--- a/css/style.css
+++ b/css/style.css
@@ -95,3 +95,71 @@ ul li a:hover{
     font-size: 2em;
     display: none;
 }
+
+/*------------Section slide----------------*/
+section{
+    position: relative;
+}
+
+.conteiner{
+    width: 100%;
+    height: 450px;
+    overflow: hidden;
+   position: relative;
+}
+
+.slides{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    animation: fade 1s ease-in-out;
+}
+
+@keyframes fade {
+    to{
+        opacity: 1;
+    }
+
+    from{
+        opacity: 0;
+    }
+}
+
+.slides img{
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+    filter: brightness(80%);
+}
+
+.slides .content{
+    position: absolute;
+    left: 50px;
+    bottom: 100px;
+    color: white;
+    max-width: 400px;
+    text-shadow: 0 0 1px #000;
+}
+
+.content h2{
+    font-size: 2em;
+    letter-spacing: 2px;
+}
+
+.content p{
+    line-height: 1.4;
+    margin: 10px 0;
+}
+
+.content a{
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    background: #0009;
+    padding: 10px 15px;
+}
+
+.content a:hover{
+    background: chocolate;
+}
