--- a/css/style.css
+++ b/css/style.css
@@ -163,3 +163,66 @@ section{
 .content a:hover{
     background: chocolate;
 }
+
+/*----------------*/
+
+.row{
+    width: 90%;
+    height: auto;
+    margin: 0 auto;
+    position: relative;
+    margin-top: 30px;
+}
+
+.row h2{
+    color: red;
+    letter-spacing: 2px;
+}
+
+.nav{
+    width: 100%;
+    height: 220px;
+    overflow: hidden;
+    padding: 10px 0;
+    scroll-behavior: smooth;
+}
+
+.nav .nav-bar{
+    width: 100%;
+    height: 200px;
+    display: flex;
+}
+
+.nav-bar .column{
+    min-width: 25%;
+    height: 100%;
+    transition: 0.3s linear;
+    cursor: pointer;
+}
+
+.column img{
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+}
+
+.active{
+    transform: scale(1.1);
+    border: 1px solid #ffffff;
+}
+
+.prev, .next{
+    position: absolute;
+    top: 50%;
+    font-size: 2em;
+    background: #0009;
+    color: white;
+    padding: 5px 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.next{
+    right: 0;
+}
