--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ section{
 
 .prev, .next{
     position: absolute;
-    top: 50%;
+    top: 40%;
     font-size: 2em;
     background: #0009;
     color: white;
@@ -225,4 +225,89 @@ section{
 
 .next{
     right: 0;
+}
+
+/*--------------Responsive-------------*/
+
+@media (max-width:1100px){
+    .logo{
+        margin-left: 50px;
+    }
+
+    .search{
+        margin-right: 10px;
+    }
+
+    ul{
+        margin-right: 10px;
+    }
+}
+
+@media (max-width:960px){
+    ul{
+        width: 100%;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: -100%;
+        background: #111;
+        z-index: 99;
+        padding-top: 80px;
+        text-align: center;
+        overflow: auto;
+        transition: 0.5s linear;
+    }
+
+    ul li{
+        display: block;
+        padding: 20px 50px;
+    }
+
+    .menu-close, .menu-open{
+        display: block;
+        cursor: pointer;
+    }
+}
+
+#chk1:checked ~ ul{
+    left: 0;
+}
+#chk1{
+    display:none;
+}
+
+@media (max-width:760px){
+    .nav, .row{
+        height: auto;
+    }
+
+    .nav .nav-bar{
+        height: auto;
+        flex-wrap: wrap;
+        transition: 0.5 linear;
+    }
+
+    .column{
+        width: 25%;
+    }
+
+    .prev, .next{
+        display: none;
+    }
+}
+
+@media (max-width:550px){
+
+    .search{
+        position: fixed;
+        top: 20px;
+        z-index: 99;
+        left: -100%;
+        transform: translateX(-50%);
+        transition: 0.5 linear;
+    }
+}
+
+#chk1:checked ~ .search{
+    left: 50%;
 }
