--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ section{
 .prev, .next{
     position: absolute;
     top: 40%;
-    font-size: 2em;
+    font-size: 3.5em;
     background: #0009;
     color: white;
     padding: 5px 10px;
@@ -277,7 +277,7 @@ section{
 }
 
 @media (max-width:760px){
-    .nav, .row{
+    .nav .row{
         height: auto;
     }
 
